--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.3",
+    "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
     "moment": "^2.24.0",
     "react": "^16.9.0",
@@ -36,5 +37,6 @@
   "devDependencies": {
     "eslint": "^6.3.0",
     "eslint-plugin-react": "^7.14.3"
-  }
+  },
+  "proxy": "https://fantasy.premierleague.com"
 }
