--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.3",
+    "@nivo/line": "^0.59.3",
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
     "moment": "^2.24.0",
