--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@nivo/line": "^0.59.3",
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
+    "http-proxy-middleware": "^0.20.0",
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -38,6 +39,5 @@
   "devDependencies": {
     "eslint": "^6.3.0",
     "eslint-plugin-react": "^7.14.3"
-  },
-  "proxy": "https://fantasy.premierleague.com"
+  }
 }
