--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,7 @@
 # example netlify.toml
 [build]
-  command = "yarn build"
+  command = "npm run build"
   functions = "functions" # not strictly required but putting this for convenience
-  publish = "build"
-
-# Uncomment to use this redirect for Single Page Applications like create-react-app. 
-# Not needed for static site generators.
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+  publish = "./build"
 
 ## more info on configuring this file: https://www.netlify.com/docs/netlify-toml-reference/ 
