--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.3",
     "@nivo/line": "^0.59.3",
+    "@nivo/pie": "^0.59.1",
     "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.20.0",
