--- a/netlify.toml
+++ b/netlify.toml
@@ -4,4 +4,9 @@
   functions = "functions" # not strictly required but putting this for convenience
   publish = "./build"
 
+[[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200
+
 ## more info on configuring this file: https://www.netlify.com/docs/netlify-toml-reference/ 
