--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,7 @@
 # example netlify.toml
 [build]
   command = "npm run build"
-  base = "fpl_tracker/"
-  publish = "fpl_tracker/build/"
   functions = "functions" # not strictly required but putting this for convenience
-
-[[redirects]]
-from = "/*"
-to = "/index.html"
-status = 200
+  publish = "./build"
 
 ## more info on configuring this file: https://www.netlify.com/docs/netlify-toml-reference/ 
