--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "fpl_tracker",
   "version": "0.1.0",
+  "homepage": "https://fpl-tracker.netlify.com/",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.4.0",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/styles": "^4.3.3",
+    "@material-ui/core": "^4.6.0",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/styles": "^4.6.0",
     "@nivo/bar": "^0.59.2",
     "@nivo/line": "^0.59.3",
     "@nivo/pie": "^0.59.1",
@@ -13,9 +14,9 @@
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.20.0",
     "moment": "^2.24.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,7 +40,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.3.0",
-    "eslint-plugin-react": "^7.14.3"
+    "eslint": "^6.6.0",
+    "eslint-plugin-react": "^7.16.0"
   }
 }
