--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "fpl_tracker",
   "version": "0.1.0",
-  "homepage": "https://fpl-tracker.netlify.com/",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.6.0",
@@ -14,9 +13,9 @@
     "axios": "^0.19.0",
     "http-proxy-middleware": "^0.20.0",
     "moment": "^2.24.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-scripts": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,7 +39,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.6.0",
-    "eslint-plugin-react": "^7.16.0"
+    "eslint": "^6.3.0",
+    "eslint-plugin-react": "^7.14.3"
   }
 }
