--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 # example netlify.toml
 [build]
   command = "npm run build"
-  functions = "functions" # not strictly required but putting this for convenience
-  publish = "./build"
+  publish = "build"
 
 ## more info on configuring this file: https://www.netlify.com/docs/netlify-toml-reference/ 
