--- a/package.json
+++ b/package.json
@@ -2,23 +2,26 @@
   "name": "fpl_tracker",
   "version": "0.1.0",
   "dependencies": {
-    "@material-ui/core": "^4.6.0",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/styles": "^4.6.0",
-    "@nivo/bar": "^0.59.2",
-    "@nivo/line": "^0.59.3",
-    "@nivo/pie": "^0.59.1",
-    "@reach/router": "^1.2.1",
-    "axios": "^0.19.0",
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.10.0",
+    "@nivo/bar": "^0.62.0",
+    "@nivo/line": "^0.62.0",
+    "@nivo/pie": "^0.62.0",
+    "@reach/router": "^1.3.3",
+    "axios": "^0.19.2",
     "http-proxy-middleware": "^0.20.0",
-    "moment": "^2.24.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "^3.1.1"
+    "moment": "^2.27.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "clean": "rm -rf node_modules",
+    "reinstall": "npm run clean && npm install",
+    "rebuild": "npm run clean && npm install && npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -38,7 +41,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.3.0",
-    "eslint-plugin-react": "^7.14.3"
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.20.0"
   }
 }
